MediaStream API: MediaStreams stops proper cleanup to take place during a page reload. https://bugs.webkit.org/show_bug.cgi?id=83143

Reviewed by Adam Barth.

To fix this I have converted MediaStream and LocalMediaStream to be ActiveDOMObjects.

Have no idea how to write a test that succesfully verifies this. I have done manual testing
to verify that proper tear-down now takes place.

* Modules/mediastream/LocalMediaStream.cpp:
(WebCore::LocalMediaStream::create):
(WebCore::LocalMediaStream::stopFunction):
(WebCore):
* Modules/mediastream/LocalMediaStream.h:
(LocalMediaStream):
* Modules/mediastream/LocalMediaStream.idl:
* Modules/mediastream/MediaStream.cpp:
(WebCore::MediaStream::create):
(WebCore::MediaStream::MediaStream):
(WebCore::MediaStream::scriptExecutionContext):
* Modules/mediastream/MediaStream.h:
(MediaStream):


Canonical link: https://commits.webkit.org/100785@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113460 268f45cc-cd09-0410-ab3c-d52691b4dbfc