Source/WebCore/Modules/mediastream/LocalMediaStream.cpp
@@ -35,13 +35,20 @@ namespace WebCore {
 
 PassRefPtr<LocalMediaStream> LocalMediaStream::create(ScriptExecutionContext* context, const MediaStreamSourceVector& audioSources, const MediaStreamSourceVector& videoSources)
 {
-    return adoptRef(new LocalMediaStream(context, audioSources, videoSources));
+    RefPtr<LocalMediaStream> stream = adoptRef(new LocalMediaStream(context, audioSources, videoSources));
+    stream->suspendIfNeeded();
+    return stream.release();
 }
 
 LocalMediaStream::LocalMediaStream(ScriptExecutionContext* context, const MediaStreamSourceVector& audioSources, const MediaStreamSourceVector& videoSources)
     : MediaStream(context, MediaStreamDescriptor::create(createCanonicalUUIDString(), audioSources, videoSources))
     , m_stopTimer(this, &LocalMediaStream::stopTimerFired)
 {
+}
+
+void LocalMediaStream::stopFunction()
+{
+    stop();
 }
 
 void LocalMediaStream::stop()
